# llm-app-eval

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
src/llm_app_eval/: __init__.py  app.py  eval_properties.py  evaluator.py  example.ipynb  qa_extraction.py
src/llm_app_eval/notebooks/: 20230930_question_answer_pairs.ipynb  20231001_evaluate_properties.ipynb
tests/: __init__.py  test_import.py
